--- a/docs/rsdk_theme/body.css
+++ b/docs/rsdk_theme/body.css
@@ -3,6 +3,10 @@
     background-color: color-mix(in srgb, var(--content-bg-color), transparent 30%);
 }
 
+.md-main__inner {
+    margin-bottom: 1.5rem;
+}
+
 /* Disable drop shadow for nav title */
 .md-nav--lifted > .md-nav__list > .md-nav__item--active > .md-nav__link {
     background: none;
