--- a/docs/rsdk_theme/body.css
+++ b/docs/rsdk_theme/body.css
@@ -7,13 +7,15 @@
     margin-bottom: 1.5rem;
 }
 
-.md-typeset h1 {
+.md-typeset h1,
+.md-typeset h2,
+.md-typeset h3,
+.md-typeset h4,
+.md-typeset h5,
+.md-typeset h6 {
     font-weight: bold;
 }
 
-.md-typeset h2 {
-    font-weight: bold;
-}
 
 .tabbed-labels {
     background-color: var(--content-bg-color);
