Add v3, v4, and v5 icons

--- a/docs/rsdk_theme/colors.css
+++ b/docs/rsdk_theme/colors.css
@@ -46,10 +46,10 @@
 
 /* RSDK versions */
 .rsdkv3 {
-  color: #CF3E49;
+  color: #CE3F49;
 }
 .rsdkv4 {
-  color: #0376BC;
+  color: #0575BB;
 }
 .rsdkv5 {
   color: #E0C251;
