--- a/docs/rsdk_theme/body.css
+++ b/docs/rsdk_theme/body.css
@@ -7,6 +7,11 @@
     margin-bottom: 1.5rem;
 }
 
+.md-nav--primary .md-nav__title {
+    background: none;
+    box-shadow: none;
+}
+
 .md-typeset h1,
 .md-typeset h2,
 .md-typeset h3,
