Don't show permalink buttons for h1 headers

--- a/docs/rsdk_theme/body.css
+++ b/docs/rsdk_theme/body.css
@@ -25,6 +25,10 @@
     color: var(--md-typeset-color);
 }
 
+.md-typeset h1 .headerlink {
+    display: none;
+}
+
 .tabbed-labels {
     background-color: color-mix(in hsl, var(--content-bg-color) 80%, transparent);
 }
